--- a/CSS/style.css
+++ b/CSS/style.css
@@ -318,7 +318,6 @@ a {
   padding: 10px;
   float: left;
   display: grid;
-  grid-column: 1fr 1fr;
   grid-column-start: 2;
 }
 
@@ -625,7 +624,6 @@ a {
     display: grid;
     grid-template-rows: 1fr 2fr auto;
     width: auto;
-    padding: auto;
   }
   .card-pop {
     margin: auto;
@@ -903,6 +901,7 @@ a {
   }
   .activities-block h2 {
     padding-left: 20px;
+    padding-bottom: 40px;
   }
 
   .activities-card-wrapper {
@@ -914,15 +913,12 @@ a {
     height: 100%;
   }
   .activities-card-container {
-    min-height: none;
-    min-width: none;
     width: 90%;
     max-height: 190px;
     min-height: 0px;
   }
 
   .activities-card {
-    min-width: none;
     max-width: 100%;
     width: 100%;
     max-height: 190px;
