--- a/CSS/style.css
+++ b/CSS/style.css
@@ -223,8 +223,7 @@ a {
 
 .first-block {
   position: relative;
-  display: grid;
-  grid-template-rows: repeat(1fr 3); 
+  display: grid; 
  height: auto;
   background-color: #f2f2f2;
   border-radius: 20px;
@@ -502,14 +501,14 @@ justify-items: center;
   padding-bottom: 20px;
   font-size: 18px;
   padding-left: 5%;
-}
+  white-space: nowrap;  }
+
 
 .footer p {
   font-size: 16px;
   padding-left: 5%;
+  white-space: nowrap;  }
 
-
-}
 
 /* RESPONSIVE DESIGN POUR TABLETTE */
 
