--- a/CSS/style.css
+++ b/CSS/style.css
@@ -592,6 +592,7 @@ justify-items: center;
   .activities-title {
     padding-top: 8px;
     font-size: 13px;
+    padding-left: 10px;
   }
   .activities-block h2 {
     padding-left: 0;
