--- a/CSS/style.css
+++ b/CSS/style.css
@@ -141,8 +141,8 @@ input:focus {
 .filtre-border {
   display: flex;
   flex-direction: row;
-  gap: 48px;
-  width: 100%;
+  width: 58%;
+  justify-content: space-between;
 }
 .filtres-container {
   display: flex;
@@ -150,6 +150,7 @@ input:focus {
   flex-wrap: nowrap;
   gap: 48px;
   align-items: center;
+  
 }
 
 .filtres {
@@ -167,9 +168,9 @@ input:focus {
   justify-content: center;
   flex-grow: 0;
   width: auto;
-  padding: 1em 1em;
+  padding: 0.8em 0.8em;
   font-weight: 700;
-  font-size: min(1.5vw, 18px);
+  font-size: min(1.2vw, 18px);
 }
 
 .filtre:hover {
@@ -265,7 +266,8 @@ a {
 .card {
   margin: auto;
   width: 100%;
-  height: 199px;
+  height: 14.5vw;
+  max-height:199px ;
   background-color: #ffffff;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   border: 5px solid #ffffff;
@@ -278,7 +280,7 @@ a {
 .image-container {
   width: auto;
   position: relative;
-  height:68%;
+  height: min(134px, 9.2vw);
   overflow: hidden;
 }
 
@@ -306,13 +308,13 @@ padding-left: 5px;
   font-size: min(1.2vw, 16px);
     margin: 0;
     padding-top: 5px;
-    padding-bottom: 3px;
+    padding-bottom: px;
 }
 
 .text {
   font-size: 15px;
   margin: 0;
-  font-size: min(1.5vw, 14px);
+  font-size: min(1.2vw, 14px);
 
 }
 
@@ -322,7 +324,7 @@ padding-left: 5px;
   left: 5px;
   display: flex;
   margin: 0;
-  font-size: 14px;
+  font-size: min(13px, 14px);
 }
 .stars,
 .stars-pop i {
@@ -346,6 +348,7 @@ padding-left: 5px;
   font-weight: 700;
 }
 
+
 .card-body-pop {
   padding: 10px;
   display: flex;
@@ -355,7 +358,9 @@ flex-direction: column;
 .card-pop {
   margin: auto;
   width: auto;
-  height: 144px;
+  height: 10vw;
+  max-height: 144px;
+  min-height: 118px;
   background-color: #ffffff;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   border: 5px solid #ffffff;
@@ -381,7 +386,7 @@ flex-direction: column;
 .image-container-pop {
   position: relative;
   width: 100%;
-  height: 144px;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -389,7 +394,6 @@ flex-direction: column;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  height: 144px;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -399,12 +403,18 @@ flex-direction: column;
 
 .icon-and-title {
 display: grid;
-grid-template-columns: 8fr 1fr; 
+grid-template-columns: 6.5fr 1fr; 
 align-items: center;
-margin-top: 1.8em;
-grid-gap: 20px;
-
+margin-top: 1em;
+width: 95%;
+gap: 5%;
+padding-left: 10%;
 }
+
+h2.pop-title {
+  padding-left: 0 !important;
+}
+
 
 .grow {
   justify-items: center; 
@@ -424,7 +434,7 @@ font-size: 14px;
   margin: auto;
   display: grid;
   width: 80%;
-  grid-template-rows: 1fr 1fr 1fr;  
+  grid-template-rows: 144px 144px 144px;  
   grid-gap: 25px;
   justify-self: center;
   align-self: center;
@@ -500,8 +510,8 @@ font-size: 14px;
   position: relative;
   padding-bottom: 58px;
   display: grid;
-grid-template-columns: 1fr 2fr 1fr 0.5fr;  
-justify-items: center;
+  grid-template-columns: 2.3fr 2.6fr 2.8fr;
+justify-items: flex-start;
   background-color: #d9d9d9;
 }
 
@@ -509,13 +519,13 @@ justify-items: center;
   padding-top: 30px;
   padding-bottom: 20px;
   font-size: 18px;
-  padding-left: 5%;
+  margin-left:70px;
   white-space: nowrap;  }
 
 
 .footer p {
   font-size: 16px;
-  padding-left: 5%;
+  margin-left: 70px;
   white-space: nowrap;  }
 
 
@@ -530,7 +540,8 @@ justify-items: center;
   
   }
 .filtre-border {
-  gap: 2%;
+  gap: 1%;
+  width: 88%;
 }
   .filtres-container {
     gap: 1%;
@@ -554,6 +565,24 @@ justify-items: center;
     font-size: min(1.8vw, 16px);
   }
 
+  .text {
+    font-size: min(1.6vw, 14px);
+
+  }
+
+  .card {
+    height: 20vw;
+  }
+
+  .image-container {
+    height: min(134px, 13vw);
+  }
+
+  .stars {
+    font-size: min(13px, 14px);
+
+  }
+
   .card-container-second-block {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -565,21 +594,23 @@ justify-items: center;
  
   .card-pop {
    width: 100%;
+   max-height: 134px;
   }
   .title-pop {
     margin: 0;
     padding-bottom: 0;
-    font-size: min(1.8vw, 16px);
+    font-size: min(1.6vw, 16px);
   }
   
   .text-pop {
     margin: 0;
     font-size: 15px;
-    font-size: min(1.7vw, 14px);
+    font-size: min(1.4vw, 14px);
   }
 
   .icon-and-title {
-    grid-template-columns: 10fr 1fr 0.5fr; 
+    grid-template-columns: 12fr 2fr 0.05fr; 
+    padding-left: 5%;
   }
 
   .grow {
@@ -590,10 +621,23 @@ justify-items: center;
   
 
   .activities-title {
-    padding-top: 8px;
-    font-size: 13px;
-    padding-left: 10px;
+    display: flex;
+    padding-top: 6px;
+    font-size: min(1.6vw, 16px);
+    padding-left: 12px;
+    width: 90%;
+    height: 48px;
+  align-items: center;
+}
+
+  #notre-dame {
+    width: 60%;
   }
+
+  #calanques {
+    width: 87%;
+  }
+
   .activities-block h2 {
     padding-left: 0;
   }
@@ -620,6 +664,10 @@ justify-items: center;
     width: 182px;
   }
 
+  .activities-image-container  {
+    height: 211px;}
+
+
   .activities-card-container {
     position: relative;
     min-height: auto;
@@ -635,13 +683,24 @@ justify-items: center;
     overflow: hidden;
     width: auto;
     overflow: hidden;
-    grid-template-columns: 2fr 2fr 1fr 0.5fr;  
+    grid-template-columns: 0.8fr 0.8fr 1fr;
     justify-items: flex-start;
+    padding-left: 70px;
 
   }
 
-  .footer h2 {
-white-space: nowrap;  }
+  .footer h2 { 
+  white-space: nowrap; 
+  margin-left: 0;
+  font-size: min(2vw, 18px);
+
+}
+
+.footer p {
+  margin-left: 0;
+  font-size: min(1.5vw, 16px);
+
+}
 }
 
 @media all and (max-width: 767px) {
@@ -805,6 +864,12 @@ header {
     width: 100%;
     border-radius: 0px;
   }
+
+ .icon-and-title {
+  padding-left: 20px;
+  width: 90%;
+ }
+  
   .card-container-second-block {
     display: flex;
     flex-direction: column;
@@ -816,7 +881,10 @@ header {
     width: auto;
     height: auto;
   }
-
+.card-body-pop  {
+  padding-right:0px ;
+  padding-left: 8px;
+}
   .title-pop, .title {
     font-size: 16px;
   }
@@ -829,8 +897,12 @@ padding-bottom: 0px;
 }
   .image-container-pop {
     width: 100%;
-    max-width: 100%;
+    height: 100%;
   }
+
+  .image-container-pop img {
+    height: 144px};
+
 
   .first-block {
     width: 100%;
@@ -845,10 +917,13 @@ padding-bottom: 0px;
   .card {
     margin: 0 20px;
     width: auto;
+    height: 189px;
   }
 
   .image-container {
     width: 100%;
+    height: 68%;
+
   }
 
   .image-container img {
@@ -884,11 +959,10 @@ padding-bottom: 0px;
     align-items: center;
     gap: 24px;
     height: 100%;
+
   }
   .activities-card-container {
-    width: 90%;
-    padding-left: 20px;
-    margin-right: 20px;
+    width: 100%;
     max-height: 190px;
   }
 
@@ -896,6 +970,8 @@ padding-bottom: 0px;
     max-width: 100%;
     width: 100%;
     height: 190px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   .activities-image-container {
     min-height: 0px;
@@ -917,15 +993,27 @@ padding-bottom: 0px;
     padding-bottom: 12px;
     font-size: 16px;
   }
-
+#notre-dame {
+  width: 100%;
+}
   .footer {
     display: flex;
     flex-direction: column;
     margin: auto;
+    padding-left: 10px;
   }
 
-  .footer h2, .footer p  {
+  .footer h2 {
     padding-left: 20px;
+    font-size: 16px;
+
+  }
+  
+  
+  .footer p  {
+    padding-left: 20px;
+    font-size: 15px;
+
   }
 }
 
