--- a/CSS/style.css
+++ b/CSS/style.css
@@ -603,11 +603,23 @@ justify-items: flex-start;
   margin: auto;
   width: 90%;
   }
- 
+  .card-body-pop {
+    padding-left: 5px;}
+
   .card-pop {
    width: 100%;
    max-height: 134px;
+   min-height: min(15vw, 134px);
   }
+
+
+  .image-container-pop {
+    position: relative;
+    width: min(9vw, 94px);
+    height: 100%;
+    overflow: hidden;
+  }
+  
   .title-pop {
     margin: 0;
     padding-bottom: 0;
